--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
     "focus-trap-react": "^6.0.0",
+    "kayvee": "^3.13.0",
     "less": "^3.8.1",
     "lodash": "^4.14.1",
     "moment": "^2.18.1",
