--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "module": "commonjs",
     "noUnusedLocals": true,
     "noImplicitAny": false,
+    "preserveConstEnums": true,
     "target": "es5",
     "types": ["jest"]
   },
