--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "5.x",
     "eslint-config-airbnb": "^6.2.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-webpack": "^0.7.0",
     "eslint-plugin-react": "^4.2.3",
     "extract-text-webpack-plugin": "^1.0.1",
