--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "2.62.0",
+  "version": "2.62.1",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -50,6 +50,7 @@
     "react-select": "~1.2.1",
     "react-sticky": "^6.0.1",
     "react-transition-group": "~1.2.0",
+    "react-responsive": "^8.0.3",
     "short-number": "^1.0.6",
     "tether": "^1.4.0"
   },
