--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "prop-types": "^15.5.10",
     "react-accessible-accordion": "^1.0.2",
     "react-autosize-textarea": "^7.0.0",
-    "react-bootstrap": "0.32.1",
+    "react-bootstrap": "^0.33.1",
     "react-copy-to-clipboard": "^4.3.1",
     "react-datepicker": "~1.6.0",
     "react-datetime": "^2.14.0",
@@ -48,7 +48,7 @@
     "react-responsive": "^8.0.3",
     "react-select": "~1.2.1",
     "react-sticky": "^6.0.1",
-    "react-transition-group": "~1.2.0",
+    "react-transition-group": "^2.9.0",
     "short-number": "^1.0.6",
     "tether": "^1.4.0"
   },
@@ -59,6 +59,7 @@
     "@types/react": "^16.9.49",
     "@types/react-datepicker": "^1.8.0",
     "@types/react-linkify": "^1.0.0",
+    "@types/react-transition-group": "^2.9.2",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^1.9.0",
     "autoprefixer": "^6.5.3",
