--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clever-components",
-  "version": "2.73.0",
+  "version": "2.74.0",
   "description": "A library of helpful React components and less styles",
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "@types/prop-types": "^15.5.1",
     "classnames": "^2.2.5",
     "core-js": "^2.4.1",
+    "downshift": "^6.1.0",
     "focus-trap-react": "^6.0.0",
     "less": "^3.8.1",
     "linkify-it": "^3.0.2",
